# UrbanRenewal-Planner

./: .env.example  .gitignore  README.md  app.py  claude.md  main.py  project.example.yaml  pyproject.toml
eval/: golden_questions.json
notebooks/: POI.ipynb  street_road.ipynb  street_view.ipynb
scripts/: build_rag.py  eval_task_planner.py  ocr_scanned_pdfs.py  run_agent_smoke.py  test_agent.py  test_rag.py
src/urbanrenewal/agent/: autonomous.py  budget.py  checkpoint.py  llm.py  plan.py  planner.py  report.py
src/urbanrenewal/api/: __init__.py  main.py  observability.py  rate_limit.py  schemas.py  store.py  task_models.py  task_store.py  tasks.py
src/urbanrenewal/config/: __init__.py  settings.py
src/urbanrenewal/rag/: build_policy_rag.py
src/urbanrenewal/tools/: geocode.py  poi_query.py  policy_rag.py  registry.py  road_query.py  streetview_query.py
src/urbanrenewal/utils/: ttl_cache.py
tests/unit/: test_agent_checkpoint.py  test_api_async.py  test_api_health.py  test_api_schemas.py  test_api_session_context.py  test_api_store.py  test_budget.py  test_eval_task_planner.py  test_observability.py  test_planning_report.py  test_rate_limit.py  test_registry_contract.py  test_task_plan.py  test_task_store.py  test_ttl_cache.py
