[project]
name = "urbanrenewal-planner"
version = "0.1.0"
description = "面向上海市杨浦区城市更新的多模态规划诊断与建议生成 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "pytest>=9.0.3",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "ruff>=0.15.12",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
    "streamlit-folium>=0.27.2",
    "fpdf2>=2.8.7",
    "python-docx>=1.2.0",
    "nbstripout>=0.9.1",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
